@@ -2,6 +2,7 @@ cm4all-beng-proxy (0.6.24) unstable; urgency=low
 
   * header-forward: log session id
   * istream: separate TCP splicing checks
+  * istream-pipe: fix segmentation fault after incomplete direct transfer
   * direct: support splice() from TCP socket to pipe
   * allow 8192 connections by default
   * allow 65536 file handles by default
